[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "*", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "*", features = ["derive"] }
serde_json = "*"
rusqlite = "*" 
uuid = { version = "*", features = ["serde", "v4"] }
anyhow = "*"
serde_rusqlite = "*"
serde_derive = "*"
rand = "*"
strum = "*"
strum_macros = "*"